--- a/src/modules/launcher/Plugins/Microsoft.Plugin.Shell/Properties/Resources.resx
+++ b/src/modules/launcher/Plugins/Microsoft.Plugin.Shell/Properties/Resources.resx
@@ -121,7 +121,7 @@
     <value>Shell</value>
   </data>
   <data name="wox_plugin_cmd_plugin_description" xml:space="preserve">
-    <value>Allows to execute system commands from PowerToys Run</value>
+    <value>Allows to execute commands (e.g 'ping', 'cmd', etc.)</value>
   </data>
   <data name="wox_plugin_cmd_cmd_has_been_executed_times" xml:space="preserve">
     <value>this command has been executed {0} times</value>
