--- a/src/modules/launcher/Plugins/Microsoft.Plugin.Uri/Properties/Resources.resx
+++ b/src/modules/launcher/Plugins/Microsoft.Plugin.Uri/Properties/Resources.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Microsoft_plugin_uri_plugin_description" xml:space="preserve">
-    <value>Handles urls</value>
+    <value>Opens URLs in your default browser</value>
   </data>
   <data name="Microsoft_plugin_uri_plugin_name" xml:space="preserve">
-    <value>Url Handler</value>
+    <value>URL Handler</value>
   </data>
   <data name="Microsoft_plugin_uri_website" xml:space="preserve">
     <value>Open in browser</value>
